[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/lib/InputMapEditor.gd" type="Script" id=1]
[ext_resource path="res://src/ui/lib/GamepadScrollContainer.gd" type="Script" id=2]
[ext_resource path="res://src/ui/lib/InputMapCapturePopup.tscn" type="PackedScene" id=3]

[node name="InputMapEditor" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="Scroll"]
margin_right = 480.0
size_flags_horizontal = 3
custom_constants/margin_right = 8

[node name="ActionEditorList" type="VBoxContainer" parent="Scroll/Margin"]
margin_right = 472.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="InputMapCapturePopup" parent="." instance=ExtResource( 3 )]
margin_right = 480.0
margin_bottom = 270.0
